src/index.css
@import "tailwindcss";

@font-face {
  font-family: "CounterStrike";
  src: local("CounterStrike"),
    url("./assets/fonts/cs_regular.ttf") format("truetype");

  font-family: "AlarmClock";
  src: local("AlarmClock"),
    url("./assets/fonts/alarm_clock.ttf") format("truetype");
}

@theme {
  --breakpoint-xxs: 22rem;
  --breakpoint-xs: 28rem;
  --breakpoint-sm: 32rem;
  --breakpoint-md: 38rem;
  --breakpoint-lg: 44rem;
}

:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

